kubernetes/apps/monitor/thanos/app/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thanos
  namespace: monitor
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "kdash.${SECRET_DOMAIN}"
    gethomepage.dev/app: "thanos"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Thanos"
    gethomepage.dev/description: "A highly available, long-term storage and querying system for Prometheus metrics"
    gethomepage.dev/href: "https://thanos.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Kubernetes"
    gethomepage.dev/icon: "si-thanos"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`thanos.${SECRET_DOMAIN}`)"
      middlewares:
        - name: network-error-pages@kubernetescrd
        - name: network-internal-only@kubernetescrd
        - name: network-default-middlewares@kubernetescrd
        - name: network-middlewares-authentik@kubernetescrd
      services:
        - kind: Service
          name: thanos-query-frontend
          port: 10902

  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
